Fix #105280: DRW: Allow UBO bindpoint of 0 for clipping data.

The check was testing against 0 instead of -1
(invalid location).

Authored by Apple: Michael Parkin-White

Ref #96261
Pull Request #105310